Adding streaming for Search endpoints